# file_observer

./: .env.example  .gitignore  Readme.md  docker-compose.yml
.github/workflows/: publish.yaml
docker/backend/: Dockerfile
src/: pyproject.toml  requirements.txt  scheduler.py
src/core/: db.py  db_utils.py
src/domains/: models.py
src/files/отчет_2025_1/: разное.xlsx
src/repository/: file_repository.py
src/services/: __init__.py  email_service.py  file_service.py
src/utils/: configuration.py  logger_project.py  recursive_file_observer.py
